<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.politicalpreparedness.ui.election.ElectionsViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.udacity.politicalpreparedness.ui.MainActivity">

        <!-- Add Upcoming Election Recycler and Header -->
        <TextView
            android:id="@+id/upcomingElectionsHeaderTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/two_grid_unit"
            android:background="@color/colorPrimaryDark"
            android:text="@string/upcoming_elections"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            reloadData="@{viewModel.showLoading}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/one_grid_unit"
            app:layout_constraintBottom_toTopOf="@+id/center_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/upcomingElectionsHeaderTv">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingElectionsRv"
                listData="@{viewModel.upcomingElections}"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/two_grid_unit"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ImageView
            android:id="@+id/upcoming_status"
            showError="@{viewModel.upcomingElections.size()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/connection_issue"
            android:minWidth="100dp"
            android:minHeight="100dp"
            android:src="@drawable/ic_connection_error"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/center_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcomingElectionsHeaderTv"
            app:tint="@color/colorAccent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/quarter_grid_unit"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/savedElectionsHeaderTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/two_grid_unit"
            android:background="@color/colorPrimaryDark"
            android:text="@string/saved_elections"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/center_guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/savedElectionsRv"
            listData="@{viewModel.electionSaved}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/one_grid_unit"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/savedElectionsHeaderTv" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>