...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Add Button to navigate to upcoming elections. -->
        <Button
            android:id="@+id/upcomingElectionsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/up_coming_elections"
            app:layout_constraintBottom_toTopOf="@+id/findRepresentativesButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/launchUiButtonStyle" />

        <!-- Add Button to navigate to representatives. -->
        <Button
...
